fix: update logo alignment and font styling for improved header appearance

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -32,8 +32,10 @@
 /* 3. Header Areas */
 .logo {
   grid-area: logo;
-  align-self: center;      /* top */
+  align-self: start;      /* top */
   justify-self: center;   /* horizontal center */
+    font-family: 'Bonheur Royale', cursive;
+    font-size: 1.5rem;
 }
 
 .category{
@@ -51,8 +53,7 @@ p.logo, p.category{
 }
 
 p.logo{
-    font-family: 'Bonheur Royale', cursive;
-    font-size: 1.5rem;
+  
     /* margin-bottom: 3vh; */
 }
 
